fix: comment out gap property in dialog text content for rich text handling

--- a/blocks/dialog/dialog.css
+++ b/blocks/dialog/dialog.css
@@ -66,7 +66,10 @@
                 display: flex;
                 flex-direction: column;
                 align-items: flex-start;
-                gap: var(--Dialog-Text-Gap, 1rem);
+
+                /* i have commented this out because we are handling it with a richtext */
+
+                /* gap: var(--Dialog-Text-Gap, 1rem); */
                 overflow-y: auto;
                 flex: 1 0 0;
                 align-self: stretch;
